# base64_cpp

./: CMakeLists.txt  README.md  base64.cpp  base64.hpp  base64.sln  base64.vcxproj  base64.vcxproj.filters  base64cpp.sln  pch.h
base64c/: CMakeLists.txt  base64.h  base64c.vcxproj  base64c.vcxproj.filters
base64cpp/: base64.cpp  base64.hpp  base64cpp.vcxproj  base64cpp.vcxproj.filters
base64cpptest/: base64cpptest.vcxproj  test.cpp
c/: base64.h
test/: CMakeLists.txt  test_main.cpp
test_base64/: test.cpp  test_base64.vcxproj
